--- a/css/style.css
+++ b/css/style.css
@@ -940,6 +940,8 @@
 	overflow: hidden;
   }
   .item.tile {
+	position: relative;
+	overflow: hidden;
 	float: left;
 	width: 50%;
 	padding: 0.25em;
@@ -951,6 +953,25 @@
   .item img {
     display: block;
 	width: 100%;
+  }
+  .item .title {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	display: none;
+	background: #000;
+	background: rgba(0, 0, 0, 0.5);
+	color: #FFF;
+	padding: 10px;
+	text-align: center;
+	-webkit-transition: all 0.3s ease-out;
+	-moz-transition: all 0.3s ease-out;
+	-o-transition: all 0.3s ease-out;
+	transition: all 0.3s ease-out;
+  }
+  .item.tile:hover .title {
+	display: block;
   }
 
   /* !---------- Search ---------- */
