--- a/css/style.css
+++ b/css/style.css
@@ -956,9 +956,10 @@
   }
   .item .title {
 	position: absolute;
-	bottom: 0;
-	left: 0;
-	right: 0;
+	bottom: 0.25em;
+	left: 0.25em;
+	right: 0.25em;
+	top: 0.25em;
 	display: none;
 	background: #000;
 	background: rgba(0, 0, 0, 0.5);
