--- a/css/style.css
+++ b/css/style.css
@@ -963,6 +963,9 @@
 	display: none;
 	background: #000;
 	background: rgba(0, 0, 0, 0.5);
+	background-image: url("../images/play1.png");
+	background-repeat: no-repeat;
+	background-position: center center;
 	color: #FFF;
 	padding: 10px;
 	text-align: center;
