--- a/css/style.css
+++ b/css/style.css
@@ -966,6 +966,7 @@
 	background-image: url("../images/play1.png");
 	background-repeat: no-repeat;
 	background-position: center center;
+	background-size: 25%;
 	color: #FFF;
 	padding: 10px;
 	text-align: center;
