--- a/css/style.css
+++ b/css/style.css
@@ -940,11 +940,19 @@
 	overflow: hidden;
   }
   .item.tile {
-	position: relative;
 	overflow: hidden;
 	float: left;
 	width: 50%;
 	padding: 0.25em;
+	-webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    *behavior: url("../javascripts/boxsizing.htc");
+  }
+  .item-thumb {
+	position: relative;
+	overflow: hidden;
+	width: 100%;
 	-webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -956,10 +964,10 @@
   }
   .item .overlay {
 	position: absolute;
-	bottom: 0.25em;
-	left: 0.25em;
-	right: 0.25em;
-	top: 0.25em;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	top: 0;
 	display: none;
 	background: rgba(0, 0, 0, 0.5);
 	background-image: url("../images/play2.png");
