--- a/css/style.css
+++ b/css/style.css
@@ -982,6 +982,14 @@
   .item.tile:hover .overlay {
 	display: block;
   }
+  .item.tile .title {
+	width: 100%;
+	height: 3em;
+	-webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    *behavior: url("../javascripts/boxsizing.htc");
+  }
 
   /* !---------- Search ---------- */
   #search-results {
