--- a/css/style.css
+++ b/css/style.css
@@ -1690,7 +1690,7 @@
     display: inline;
   }
   .item.tile {
-	width: 20%;
+	width: 33.3333333333333333%;
   }
 
   /* !---------- Collections ---------- */
@@ -1754,5 +1754,20 @@
   }
   .exhibits.show #content #exhibit-page-navigation a, .exhibits.show #content #exhibit-page-navigation span {
     width: 100%;
+  }
+}
+@media screen and (min-width: 40em) {
+  .item.tile {
+	width: 33.3333333333333333%;
+  }
+}
+@media screen and (min-width: 55em) {
+  .item.tile {
+	width: 25%;
+  }
+}
+@media screen and (min-width: 72em) {
+  .item.tile {
+	width: 16.666666666%;
   }
 }
