--- a/css/style.css
+++ b/css/style.css
@@ -983,6 +983,13 @@
   .item.tile .title {
 	width: 100%;
 	height: 3em;
+	position: absolute;
+	background-color: rgba(0, 0, 0, 0.5);
+	color: white;
+	text-align: center;
+	bottom: 0;
+	left: 0;
+	right: 0;
 
   }
 
