--- a/css/style.css
+++ b/css/style.css
@@ -1449,7 +1449,7 @@
   */
   /* !---------- Header ---------- */
   body {
-	font-size: .9em;
+	font-size: 10px;
   }
   header {
     *zoom: 1;
@@ -1763,12 +1763,12 @@
 }
 @media screen and (min-width: 1024px) {
   body {
-	font-size: .8em
+	font-size: 8px;
   }
 }
 @media screen and (min-width: 1200px) {
   body {
-	font-size: 1em
+	font-size: 12px;
   }
   .item.tile {
 	width: 20%;
