--- a/css/style.css
+++ b/css/style.css
@@ -619,15 +619,6 @@
     margin: 0 0 0.75em -16px;
     width: 100%;
   }
-  #content > div, #content section {
-    padding: 0.25em;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    *behavior: url("../javascripts/boxsizing.htc");
-    margin-bottom: 1.125em;
-    *zoom: 1;
-  }
   #content > div > *:only-child, #content section > *:only-child {
     margin-top: 0;
   }
@@ -944,12 +935,14 @@
   .items.browse .grid {
 	clear: both;
 	overflow: hidden;
+	margin-left: -1%;
   }
   .item.tile {
 	overflow: hidden;
 	float: left;
-	width: 50%;
-	padding: 0.25em;
+	width: 49%;
+	margin-left: 1%;
+	margin-bottom: 3%;
   }
   .item-thumb {
 	position: relative;
@@ -1695,7 +1688,7 @@
     display: inline;
   }
   .item.tile {
-	width: 25%;
+	width: 24%;
   }
 
   /* !---------- Collections ---------- */
@@ -1771,6 +1764,6 @@
 	font-size: 13px;
   }
   .item.tile {
-	width: 20%;
+	width: 19%;
   }
 }
