--- a/css/style.css
+++ b/css/style.css
@@ -985,7 +985,12 @@
 	bottom: 0;
 	left: 0;
 	right: 0;
-
+	padding: 2%;
+  }
+  .item.tile .title p {
+	margin: 0;
+	height: 2.4em;
+	overflow: hidden;
   }
 
   /* !---------- Search ---------- */
