--- a/css/style.css
+++ b/css/style.css
@@ -1497,6 +1497,7 @@
     /* sub-navigation panel */
 	width: auto;
 	float: right;
+	padding: 0;
   }
   nav.top *, nav.top *:before, nav.top *:after {
     box-sizing: inherit;
@@ -1601,7 +1602,6 @@
     margin-right: 0;
     *margin-left: -1em;
     display: inline;
-	clear: both;
   }
   #search-container input {
     padding: 0.46875em 8px;
