--- a/css/style.css
+++ b/css/style.css
@@ -1652,6 +1652,13 @@
   }
 
   /* !---------- Home ---------- */
+  #home body {
+	background: url(images/projectors.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  }
   #home #content #intro {
     font-size: 24px;
     line-height: 36px;
