--- a/css/style.css
+++ b/css/style.css
@@ -1653,7 +1653,7 @@
 
   /* !---------- Home ---------- */
   #home body {
-	background: url(images/projectors.jpg) no-repeat center center fixed; 
+  background: url(../images/projectors.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
