--- a/css/style.css
+++ b/css/style.css
@@ -1652,7 +1652,7 @@
   }
 
   /* !---------- Home ---------- */
-  #home body {
+  body#home {
   background: url(../images/projectors.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
