changing font and carousel

--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@
     *behavior: url("../javascripts/boxsizing.htc");
   }
   body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'Archivo Narrow', sans-serif;
     font-weight: 300;
     font-size: 10px;
     line-height: 120%;
