--- a/css/style.css
+++ b/css/style.css
@@ -1622,7 +1622,10 @@
 	position:fixed;
 	left:0px;
 	bottom:0px;
-	width:100%
+	width:100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	background-image: url("../images/egg-shell.png");
+	background-repeat: repeat;
   }
 
   /* !---------- Items --------- */
