--- a/css/style.css
+++ b/css/style.css
@@ -782,6 +782,7 @@
   #featured-carousel .carousel-item{
 	margin: 1em;
 	position: relative;
+	overflow: hidden;
   }
   #featured-carousel .carousel-item img{
 	display: block;
@@ -830,11 +831,6 @@
   }
 
   /* !---------- Home ---------- */
-  #home #content div h3, #home #content div h4, #home #content div h5, #home #content div h6,
-  #home #content div p, #home #content div input, #home #content div textarea {
-    margin-top: 0.75em;
-    margin-bottom: 0.75em;
-  }
   #home .logo {
 	display: none;
   }
@@ -1667,6 +1663,13 @@
 	background-color: rgba(0, 0, 0, 0.5);
 	background-image: url("../images/egg-shell.png");
 	background-repeat: repeat;
+  }
+  #home #content .featured-videos h2 {
+	margin-bottom: 0;
+	margin-top: 1rem;
+	margin-left: 1rem;
+	color: white;
+	line-height: 1em;
   }
 
   /* !---------- Items --------- */
