--- a/css/style.css
+++ b/css/style.css
@@ -848,6 +848,7 @@
 	-ms-user-select: none;
 	user-select: none;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+	cursor: pointer;
 }
 
   /* !---------- Home ---------- */
