--- a/css/style.css
+++ b/css/style.css
@@ -829,27 +829,9 @@
 	overflow: hidden;
 	font-weight: bold;
   }
-  .featured-videos .customNavigation.prev {
-	position: absolute;
-	left: 0;
-	bottom: 50%;
-	z-index: 1;
+  .featured-videos .customNavigation {
+	display: none;
   }
-  .featured-videos .customNavigation.next {
-	position: absolute;
-	right: 0;
-	bottom: 50%;
-	z-index: 1;
-  }
-  .featured-videos .customNavigation a{
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-	cursor: pointer;
-}
 
   /* !---------- Home ---------- */
   #home .logo {
@@ -1692,6 +1674,26 @@
 	color: white;
 	line-height: 1em;
   }
+  .featured-videos .customNavigation {
+	display: block;
+  }
+  .featured-videos .customNavigation.prev {
+	position: absolute;
+	left: 0;
+	top: 50%;
+	z-index: 1;
+  }
+  .featured-videos .customNavigation.next {
+	position: absolute;
+	right: 0;
+	top: 50%;
+	z-index: 1;
+  }
+  .featured-videos .customNavigation a{
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+	cursor: pointer;
+	color: #0c6fab;
+}
 
   /* !---------- Items --------- */
   
