--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@
     font-weight: 300;
     font-size: 10px;
     line-height: 120%;
+	color: #3c3c3c;
     word-wrap: break-word;
     height: 100%;
   }
