--- a/css/style.css
+++ b/css/style.css
@@ -682,7 +682,7 @@
   #content #search-filters li, #content #item-filters li {
     overflow: auto;
     padding: 7px;
-	line-height: 14px
+	line-height: 14px;
     background-color: #0c6fab;
   }
   #content #search-filters li li, #content #item-filters li li {
