--- a/css/style.css
+++ b/css/style.css
@@ -1828,12 +1828,23 @@
   body {
 	font-size: 12px;
   }
+  .item.tile {
+	width: 24%;
+  }
 }
 @media screen and (min-width: 1200px) {
   body {
 	font-size: 13px;
   }
   .item.tile {
-	width: 19%;
+	width: 15.666666%;
+  }
+}
+@media screen and (min-width: 1400px) {
+  body {
+	font-size: 14px;
+  }
+  .item.tile {
+	width: 11.5%;
   }
 }
