--- a/css/style.css
+++ b/css/style.css
@@ -317,7 +317,7 @@
   .pagination {
     list-style-type: none;
     padding-left: 0;
-	color: white;
+	color: #fff;
 	padding-bottom: 12px;
 	padding-top: 12px;
   }
@@ -591,8 +591,12 @@
 
   /* !---------- Footer ---------- */
   footer {
-    margin-top: 1.5em;
     padding: 0 16px;
+	background-image: url("../images/egg-shell.png");
+	background-repeat: repeat;
+	background-color: #3c3c3c;
+	border-top: 1px solid #0F0F0F;
+	color: #fff;
   }
   footer p {
     padding-bottom: 1.5em;
@@ -619,7 +623,7 @@
     text-transform: uppercase;
     border-top: 0;
     margin: 0;
-	color: white;
+	color: #fff;
   }
     #content .sub-header {
 	background-image: url("../images/egg-shell.png");
@@ -627,6 +631,13 @@
 	background-color: #3c3c3c;
 	border-top: 1px solid #5C5C5C;
 	margin-bottom: 3%;
+  }
+  #content .pre-footer {
+	background-image: url("../images/egg-shell.png");
+	background-repeat: repeat;
+	background-color: #3c3c3c;
+	border-bottom: 1px solid #5C5C5C;
+	color: #fff;
   }
   #content > h2:first-child, #content > div > h2:first-child,
   #content #primary > h2:first-child, #content #primary > div > h2:first-child,
@@ -667,7 +678,7 @@
   }
   #content #search-filters, #content #item-filters {
     padding: 10px 0;
-	color: white;
+	color: #fff;
   }
   #content #search-filters > ul, #content #item-filters > ul {
     padding-left: 0;
@@ -734,7 +745,7 @@
   #content #sort-links {
     border-top: 0;
     padding: 17px 0;
-	color: white;
+	color: #fff;
 	line-height: 14px;
   }
   #content #sort-links span, #content #sort-links ul, #content #sort-links li {
@@ -832,7 +843,7 @@
 	background-color: rgba(0, 0, 0, 0.5);
 	background-image: url("../images/egg-shell.png");
 	background-repeat: repeat;
-	color: white;
+	color: #fff;
 	text-align: center;
 	bottom: 0;
 	left: 0;
@@ -986,7 +997,7 @@
 	background-color: rgba(0, 0, 0, 0.5);
 	background-image: url("../images/egg-shell.png");
 	background-repeat: repeat;
-	color: white;
+	color: #fff;
 	text-align: center;
 	bottom: 0;
 	left: 0;
@@ -1238,7 +1249,7 @@
     max-width: 100%;
     height: 100%;
     overflow: hidden;
-    white-space: nowrap;
+    #fff-space: nowrap;
     text-overflow: ellipsis;
   }
   .exhibits #exhibit-pages.top li {
@@ -1524,7 +1535,7 @@
   nav.top .nav-item a {
     padding: 2em 0.75em;
 	line-height: 1em;
-	color: white;
+	color: #fff;
 	font-weight: bold;
   }
   nav.top .nav-item > a {
@@ -1590,10 +1601,6 @@
   }
 
   /* !---------- Pagination ---------- */
-  .pagination {
-    float: left;
-  }
-
   #content nav .pagination_list {
     margin-top: 0.375em;
   }
@@ -1660,7 +1667,7 @@
   div#content:focus {
 	outline: none;
   }
-  .sub-header {
+  .sub-header, .pre-footer {
 	padding-top: 0;
 	padding-bottom: 0;
   }
@@ -1668,7 +1675,7 @@
 	float: left;
 	margin-right: 1rem;
   }
-  .sub-header .pagination-nav, .sub-header #sort-links {
+  .sub-header .pagination-nav, .pre-footer .pagination-nav, .sub-header #sort-links {
 	float: right;
 	margin-left: 1rem;
   }
@@ -1701,7 +1708,7 @@
 	margin-top: 1rem;
 	margin-left: 1rem;
 	padding-bottom: 0;
-	color: white;
+	color: #fff;
 	line-height: 1em;
   }
   .featured-videos .customNavigation {
